--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "debug": "~2.6.9",
         "express": "~4.16.1",
         "express-fileupload": "^1.2.0",
+        "extract-zip": "^2.0.1",
         "fs-extra": "^9.0.1",
         "http-errors": "~1.6.3",
         "uuid": "^8.3.0"
