--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
         "express-fileupload": "^1.2.0",
         "extract-zip": "^2.0.1",
         "fs-extra": "^9.0.1",
+        "globby": "^11.0.1",
         "http-errors": "~1.6.3",
+        "rimraf": "^3.0.2",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
