--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "globby": "^11.0.1",
         "http-errors": "~1.6.3",
         "rimraf": "^3.0.2",
+        "sharp": "^0.26.1",
         "uuid": "^8.3.0"
     },
     "devDependencies": {
